feat: Angular authentication system and UI components implemented
- Implemented generic HTTP service with Result pattern integration
- Added Result model for consistent API response handling
- Created API endpoints constants for centralized endpoint management
- Integrated login component with backend API using HTTP service
- Implemented JWT utility for token decoding and validation
- Added authentication service with token validation
- Created auth guard for route protection
- Implemented HTTP interceptor for 401 error handling and automatic logout
- Added navbar component with user profile display and logout functionality
- Implemented token format validation and expiration checks
- Added automatic token cleanup on invalid/expired tokens
- Created responsive navbar with Bootstrap 5 and FontAwesome icons

--- a/eAppointmentClient/angular.json
+++ b/eAppointmentClient/angular.json
@@ -49,12 +49,21 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "node_modules/@fortawesome/fontawesome-free/webfonts",
+                "output": "webfonts"
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -107,12 +116,21 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "node_modules/@fortawesome/fontawesome-free/webfonts",
+                "output": "webfonts"
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           }
         }
       }
